--- a/patternlab/package.json
+++ b/patternlab/package.json
@@ -1,14 +1,10 @@
 {
-  "scripts": {
-    "patternlab:init": "patternlab init",
-    "patternlab:build": "patternlab build",
-    "patternlab:serve": "patternlab serve -w"
-  },
   "devDependencies": {
     "patternlab-node-cli": "pattern-lab/patternlab-node-cli"
   },
   "dependencies": {
     "edition-node": "^0.0.4",
+    "font-awesome": "^4.7.0",
     "starterkit-mustache-base": "pattern-lab/starterkit-mustache-base"
   }
 }
